Fix off-center icon in firefox

--- a/src/components/nav/desktop/CurrentlyPlaying.module.css
+++ b/src/components/nav/desktop/CurrentlyPlaying.module.css
@@ -43,6 +43,9 @@
 }
 
 .visualizerIconContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   padding: 5px;
   background-color: var(--static-white);
   border-radius: 50%;
